WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286527
[GStreamer] Incorrect uses of StringView::rawCharacters()
https://bugs.webkit.org/show_bug.cgi?id=286527
Summary
[GStreamer] Incorrect uses of StringView::rawCharacters()
Philippe Normand
Reported
2025-01-25 02:06:53 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-01-25 02:19:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39548
EWS
Comment 2
2025-02-28 04:51:25 PST
Committed
291316@main
(7ba4483acaf3): <
https://commits.webkit.org/291316@main
> Reviewed commits have been landed. Closing PR #39548 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-28 04:52:16 PST
<
rdar://problem/145844517
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug