[GStreamer] Incorrect uses of StringView::rawCharacters() https://bugs.webkit.org/show_bug.cgi?id=286527

Reviewed by Xabier Rodriguez-Calvar.

Our use of StringView::rawCharacters() is incorrect, its value being lifetime bound, so instead,
convert the StringView to a local CString and refer to its data.

* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::isContentTypeSupported const):
* Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:
(WebCore::retrieveTemporalIndex):
* Source/WebCore/platform/graphics/gstreamer/eme/WebKitCommonEncryptionDecryptorGStreamer.cpp:
(transformCaps):
* Source/WebCore/platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::AppendPipeline::appsinkCapsChanged):

Canonical link: https://commits.webkit.org/291316@main